Change compile and link time flag for riscv64

--- a/config/riscv64/chips/size-test-gcc/chip.cfg
+++ b/config/riscv64/chips/size-test-gcc/chip.cfg
@@ -58,13 +58,13 @@
 # For flags, this priority is applied to individual flags, not the complete
 # list of flags.
 
-cc = 'riscv32-unknown-elf-gcc'
+cc = 'riscv64-unknown-elf-gcc'
 cflags = [
-    '-c', '-Os', '-march=rv32imc', '-mabi=ilp32', '-msave-restore',
+    '-c', '-Os', '-march=rv64imc', '-mabi=lp64', '-msave-restore',
     '-fdata-sections', '-ffunction-sections'
 ]
 ldflags = [
-    '-Os', '-march=rv32imc', '-mabi=ilp32', '-msave-restore',
+    '-Os', '-march=rv64imc', '-mabi=lp64', '-msave-restore',
     '-Wl,-gc-sections', '-nostartfiles', '-nostdlib'
 ]
 dummy_libs  = ['crt0', 'libc', 'libgcc', 'libm']
