--- a/config/riscv64/chips/size-test-llvm/chip.cfg
+++ b/config/riscv64/chips/size-test-llvm/chip.cfg
@@ -58,13 +58,13 @@
 # For flags, this priority is applied to individual flags, not the complete
 # list of flags.
 
-cc = 'riscv32-unknown-elf-cc'
+cc = 'riscv64-unknown-elf-cc'
 cflags = [
-    '-c', '-Oz', '-march=rv32imc', '-mabi=ilp32',
+    '-c', '-Oz', '-march=rv64imc', '-mabi=lp64',
     '-fdata-sections', '-ffunction-sections'
 ]
 ldflags = [
-    '-Oz', '-march=rv32imc', '-mabi=ilp32',
+    '-Oz', '-march=rv64imc', '-mabi=lp64',
     '-Wl,-gc-sections', '-nostartfiles', '-nostdlib'
 ]
 dummy_libs  = ['crt0', 'libc', 'libgcc', 'libm']
