--- a/config/riscv64/chips/speed-test/chip.cfg
+++ b/config/riscv64/chips/speed-test/chip.cfg
@@ -59,10 +59,10 @@
 # list of flags.
 
 cflags = [
-    '-c',  '-O2', '-march=rv32imc', '-mabi=ilp32',
+    '-c',  '-O2', '-march=rv64imc', '-mabi=lp64',
     '-fdata-sections', '-ffunction-sections'
 ]
 ldflags = [
-    '-O2', '-march=rv32imc', '-mabi=ilp32', '-Wl,-gc-sections'
+    '-O2', '-march=rv64imc', '-mabi=lp64', '-Wl,-gc-sections'
 ]
 user_libs = ['-lm']
