Add dummy float library in arg list of riscv64 config

--- a/config/riscv64/chips/size-test-llvm/chip.cfg
+++ b/config/riscv64/chips/size-test-llvm/chip.cfg
@@ -67,4 +67,4 @@ ldflags = [
     '-Oz', '-march=rv64imc', '-mabi=lp64',
     '-Wl,-gc-sections', '-nostartfiles', '-nostdlib'
 ]
-dummy_libs  = ['crt0', 'libc', 'libgcc', 'libm']
+dummy_libs  = ['crt0', 'libc', 'libgcc', 'libm', 'libfloat']
