--- a/config/riscv64/chips/size-test-gcc/chip.cfg
+++ b/config/riscv64/chips/size-test-gcc/chip.cfg
@@ -67,4 +67,4 @@ ldflags = [
     '-Os', '-march=rv64imc', '-mabi=lp64', '-msave-restore',
     '-Wl,-gc-sections', '-nostartfiles', '-nostdlib'
 ]
-dummy_libs  = ['crt0', 'libc', 'libgcc', 'libm']
+dummy_libs  = ['crt0', 'libc', 'libgcc', 'libm', 'libfloat']
